# ethercat-device-control

./: .gitignore  Cargo.toml
src/: ec_device.rs  main.rs  misc.rs
