[package]
name = "ethercat-device-control"
version = "0.1.0"
edition = "2021"
description = """
A command line utility to control Ethercat devices
"""
repository = "https://github.com/hANSIc99/ethercat-device-control"
license = "MIT"
authors = ["Stephan Avenwedde <s.avenwedde@gmail.com>"]
categories = ["asynchronous", "network-programming", "science", "command-line-utilities"]
keywords = ["Ethercat", "Beckhoff", "ADS", "automation", "PLC"]

[dependencies]
ads_client = "1.6.0"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version =  "1.19.2", features = ["rt", "rt-multi-thread"] }
regex = "1.10.6"
log = { version = "0.4.20", features = ["max_level_trace", "release_max_level_warn"]}
log4rs = "1.2.0"